--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,10 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[profile.zksync]
+src = 'src'
+libs = ['lib']
+solc-version = "0.8.24"
+fallback_oz = true
+is_system = false
+mode = "3"
